--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,12 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-theme: jekyll-agency
+remote_theme: raviriley/agency-jekyll-theme
+
+plugins:
+  - jekyll-remote-theme
+  - jekyll-seo-tag
+  - jekyll-sitemap
 
 url    : "https://uqadvisory.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "UQA" # the subpath of your site, e.g. /blog
