--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,3 +23,6 @@ en: &DEFAULT_EN
       section: team
     - title: "Contact"
       section: contact
+    - title: "Theme Source"
+      url: https://github.com/raviriley/agency-jekyll-theme/
+
